--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+title:              Data Mining Lab. @ Kookmin Univ.
+email:              hmpark@kookmin.ac.kr
+description:        Data Mining Lab. @ Kookmin Univ.
+author:             Ha-Myung Park
+baseurl:            "/"
+url:                "https://kmudmlab.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    
+facebook_username:  
 instagram_username:  
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
-google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
+google_analytics:   
 
 # Build settings
 markdown:           kramdown
