--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Data Mining Lab. @ Kookmin Univ.
+title:              Data Mining Lab.
 email:              hmpark@kookmin.ac.kr
-description:        Data Mining Lab. @ Kookmin Univ.
+description:        Kookmin Univ.
 author:             Ha-Myung Park
 baseurl:            "/"
 url:                "https://kmudmlab.github.io"
