--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -3,8 +3,33 @@
   github: https://github.com/Grievle
   interest: Large scale graph mining, KNN
   image: ~
-- name: ChangHun Han
-  email: codingnoye@kookmin.ac.kr
-  github: https://github.com/codingnoye
-  interest: Large scale graph mining, KNN
+- name: Yujin Kim
+  email: ~
+  github: ~
+  interest: ~
+  image: ~
+- name: Sojung Lee
+  email: ~
+  github: ~
+  interest: ~
+  image: ~
+- name: Minjun Song
+  email: ~
+  github: ~
+  interest: ~
+  image: ~
+- name: Yongwook Song
+  email: ~
+  github: ~
+  interest: ~
+  image: ~
+- name: Dowoon Lee
+  email: ~
+  github: ~
+  interest: ~
+  image: ~
+- name: Junkwan Kim
+  email: ~
+  github: ~
+  interest: ~
   image: ~
