renewal student infomation

--- a/_data/graduate_student.yml
+++ b/_data/graduate_student.yml
@@ -1,5 +1,14 @@
 - name: SangHong Kim
   email: bconfiden2@naver.com
   github: https://github.com/bconfiden2
+  instagram: ~
+  facebook: ~
   interest: KNN, Graph
   image: ~
+- name: HyunSeok Park
+  email: 20151741@kookmin.ac.kr
+  github: https://github.com/gustjr7879
+  instagram: https://www.instagram.com/hyunskki/
+  facebook: ~
+  interest: Graph Neural Network
+  image: parkhyunseok.png
