--- a/_data/graduate_student.yml
+++ b/_data/graduate_student.yml
@@ -7,12 +7,12 @@
   email: 20151741@kookmin.ac.kr
   github: ~
   interest: GNN, K-cores
-  image: ~
-- name: Ismail Abdulhakin Mohamud
+  image: /img/posts/hspark.png
+- name: Ismail Abdulhakin
   email: iamismail@kookmin.ac.kr
   github: ~
   interest: Deep-learning Methods, Weather Analysis
-  image: ~
+  image: /img/posts/ismail.jpeg
 - name: Changhun Han
   email: noye@kookmin.ac.kr
   github: https://github.com/codingnoye
