--- a/_data/graduate_student.yml
+++ b/_data/graduate_student.yml
@@ -11,7 +11,7 @@
   image: /img/posts/hspark.png
 - name: Ismail Abdulhakin
   email: iamismail@kookmin.ac.kr
-  github: ~
+  github: https://github.com/iamismaill
   interest: Deep-learning Methods, Weather Analysis
   image: /img/posts/ismail.jpeg
 - name: Changhun Han
