--- a/_data/graduate_student.yml
+++ b/_data/graduate_student.yml
@@ -15,7 +15,7 @@
   interest: Deep-learning Methods, Weather Analysis
   image: /img/posts/ismail.jpeg
 - name: Changhun Han
-  email: noye@kookmin.ac.kr
+  email: codingnoye@kookmin.ac.kr
   github: https://github.com/codingnoye
   interest: Large scale graph mining, K-Nearest Neighbors
   image: https://avatars.githubusercontent.com/u/48244997?v=4
