--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -45,7 +45,7 @@
   instagram: https://www.instagram.com/minjun8739/
   
 - name: HyeSung Kim
-  image: ~
-  interest: ~
-  email: ~
-  github: ~
+  image: /img/posts/students/hyesung-kim.png
+  interest: Graph Neural Network, Data Engineering
+  email: khs0020@kookmin.ac.kr
+  github: https://github.com/Borikhs/
