Update peoples - add linkedin icons

--- a/_data/graduate_student.yml
+++ b/_data/graduate_student.yml
@@ -3,6 +3,7 @@
   interest: K-Nearest Neighbors, Graph Algorithms
   email: bconfiden2@naver.com
   github: https://github.com/bconfiden2
+  linkedin: https://www.linkedin.com/in/sang-hong-kim-a76203218/
   
 - name: HyunSeok Park
   image: /img/posts/students/hyunseok-park.png
@@ -16,6 +17,7 @@
   interest: Deep-learning Methods, Weather Analysis
   email: iamismail@kookmin.ac.kr
   github: https://github.com/iamismaill
+  linkedin: https://www.linkedin.com/in/abdulhakin-m-ismail-2715b0151/
   
 - name: ChangHun Han
   image: /img/posts/students/changhun-han.png
