update seminar 영어 세미나 내용 추가 및 시간 장소 변경

--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,15 @@
+- title: The Elements of Style - An Approach to Style(With a List of Reminders) 
+  presenter: 김상홍
+  date: 2023-03-10
+- title: The Elements of Style - A Few Matters of Form, Words and Expression Commonly Misused
+  presenter: 김유진
+  date: 2023-03-03
+- title: The Elements of Style - Elementary Principles of Composition
+  presenter: 박현석
+  date: 2023-02-24
+- title: The Elements of Style - Elementary Rules of Usage  
+  presenter: Ismail
+  date: 2023-02-17
 - title: Accelerating Triangle Counting on GPU
   presenter: 김민형
   date: 2023-01-06
