--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,6 @@
+- title: Data Augmentation for Graph Neural Networks
+  presenter: 박현석
+  date: 2023-03-24
 - title: The Elements of Style - An Approach to Style(With a List of Reminders) 
   presenter: 김상홍
   date: 2023-03-10
