--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,6 +1,12 @@
+- title: On the Unreasonable Effectiveness of Feature Propagation in Learning on Graph with Missing Node Features
+  presenter: 박현석
+  date: 2023-07-05
+- title: Self-Attentive Sequential Recommendation
+  presenter: 이영준 
+  date: 2023-06-28
 - title: "GPT-GNN: Generative Pre-Training of Graph Neural Networks"
   presenter: 김민형
-  date: 2023-06-09
+  date: 2023-06-21
 - title: '"Why should I Trust You?" Explaining the Predictions of Any Classifier'
   presenter: 강지수
   date: 2023-06-02
