--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -11,3 +11,10 @@
   interest: Graph Neural Network, Data Engineering
   email: khs0020@kookmin.ac.kr
   github: https://github.com/Borikhs/
+
+- name: YoungRak Choi
+  image: /img/posts/students/young-rak.jpeg
+  interest: Graph Neural Network
+  email: chldudfkr119@kookmin.ac.kr
+  github: https://github.com/guahama
+
