--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,7 +1,7 @@
 - title: On the Unreasonable Effectiveness of Feature Propagation in Learning on Graph with Missing Node Features
   presenter: 박현석
   date: 2023-07-05
-  slide: https://kmudmlab.kookmin.ac.kr
+  slide: https://kmudmlab.github.io
 - title: Self-Attentive Sequential Recommendation
   presenter: 이영준 
   date: 2023-06-28
