--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,7 @@
+- title: "Mining of Real-world Hypergraphs: Concepts, Patterns, and Generators"
+  presenter: 한창훈
+  date: 2023-07-19
+  slide: /assets/pdf/Mining of Real-world Hypergraphs.pdf
 - title: "Vision GNN: An Image is Worth Graph of Nodes"
   presenter: Ismail
   date: 2023-07-12
