--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,7 @@
+- title: Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest
+  presenter: 김상홍
+  date: 2023-07-26
+  slide: /assets/pdf/KDD2023.pdf
 - title: "Mining of Real-world Hypergraphs: Concepts, Patterns, and Generators"
   presenter: 한창훈
   date: 2023-07-19
