--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -18,3 +18,8 @@
   email: chldudfkr119@kookmin.ac.kr
   github: https://github.com/guahama
 
+- name: KiYeon Park
+  image: /img/posts/students/kiyeon-park.jpg
+  interest: Spatial-Temporal Graph Neural Network
+  email: willam1017@kookmin.ac.kr
+  github: https://github.com/MargielaParis
