--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,7 @@
+- title: "Graph neural networks: A review of methods and applications"
+  presenter: 김수지
+  date: 2023-08-09
+  slide: /assets/pdf/gnn_survey.pdf
 - title: Efficient Distributed Approximate k-Nearest Neighbor Graph Construction by Multiway Random Division Forest
   presenter: 김상홍
   date: 2023-07-26
