update jisu seminar

--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,7 @@
+- title: "Autoknow: Self-driving knowledge collection for products of thousands of types"
+  presenter: 강지수
+  date: 2023-08-23
+  slide: /assets/pdf/0823_jisu.pdf
 - title: "Graph neural networks: A review of methods and applications"
   presenter: 김수지
   date: 2023-08-09
