--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,7 @@
+- title: "GRADIENT GATING FOR DEEP MULTI-RATE LEARNING ON GRAPHS"
+  presenter: 김민형
+  date: 2023-08-30
+  slide: /assets/pdf/0830_민형.pdf
 - title: "Autoknow: Self-driving knowledge collection for products of thousands of types"
   presenter: 강지수
   date: 2023-08-23
