--- a/_data/alumni_grad_ms.yml
+++ b/_data/alumni_grad_ms.yml
@@ -1,2 +1,6 @@
 - name: ChaeEun Kim
   interest: Connected Components, Large scale graph mining
+
+- name: SangHong Kim
+  interest: K-Nearest Neighbors, Graph Algorithms
+  image: /img/posts/students/sanghong-kim.png
