--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,4 +1,4 @@
-- title: "GRADIENT GATING FOR DEEP MULTI-RATE LEARNING ON GRAPHS"
+- title: "Gradient Gating for Deep Multi-Rate Learning on Graphs"
   presenter: 김민형
   date: 2023-08-30
   slide: /assets/pdf/0830_민형.pdf
