--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,7 @@
+- title: "Reverse Graph Learning for Graph Neural Network"
+  presenter: 박현석
+  date: 2023-09-13
+  slide: /assets/pdf/0913_현석.pdf
 - title: "Gradient Gating for Deep Multi-Rate Learning on Graphs"
   presenter: 김민형
   date: 2023-08-30
