--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,23 @@
+- title: "TBD"
+  presenter: 강지수
+  date: 2023-11-29
+  slide: 
+- title: "TBD"
+  presenter: 김수지
+  date: 2023-11-15
+  slide: 
+- title: "TBD"
+  presenter: 이영준
+  date: 2023-11-01
+  slide: 
+- title: "TBD"
+  presenter: 한창훈
+  date: 2023-10-18
+  slide: 
+- title: "TBD"
+  presenter: 이스마일
+  date: 2023-10-11
+  slide: 
 - title: "Reverse Graph Learning for Graph Neural Network"
   presenter: 박현석
   date: 2023-09-13
