--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -23,3 +23,9 @@
   interest: Spatial-Temporal Graph Neural Network
   email: willam1017@kookmin.ac.kr
   github: https://github.com/MargielaParis
+
+- name: SungHoon Choe
+  image: /img/posts/students/sunghoon-choe.jpg
+  interest: Graph Algorithms
+  email: kookmin1916@kookmin.ac.kr
+  github: https://github.com/Neogulee
