이영준 세미나 발표자료 수정본

--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -9,7 +9,7 @@
 - title: "A Simple Framework for Contrastive Learning of Visual Representations"
   presenter: 이영준
   date: 2023-11-15
-  slide: /assets/pdf/yj_1115.pdf
+  slide: /assets/pdf/1115_yj.pdf
 - title: "Graph Attention Network"
   presenter: 한창훈
   date: 2023-11-01
