--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,7 +1,11 @@
 - title: "TBD"
   presenter: 강지수
-  date: 2023-12-13
+  date: 2023-1-17
   slide: 
+- title: "모두가 알지만 모르는 딥러닝 기초"
+  presenter: 김혜성
+  date: 2023-1-3
+  slide: /assets/pdf/hs_0103
 - title: "Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization"
   presenter: 김수지
   date: 2023-11-29
