--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -5,7 +5,7 @@
 - title: "모두가 알지만 모르는 딥러닝 기초"
   presenter: 김혜성
   date: 2023-1-3
-  slide: /assets/pdf/hs_0103
+  slide: /assets/pdf/hs_0103.pdf
 - title: "Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization"
   presenter: 김수지
   date: 2023-11-29
