--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,7 +1,7 @@
-- title: "TBD"
+- title: "Generative Agents: Interactive Simulacra of Human Behavior"
   presenter: 강지수
   date: 2023-01-17
-  slide: 
+  slide: /assets/pdf/0117_js.pdf
 - title: "모두가 알지만 모르는 딥러닝 기초"
   presenter: 김혜성
   date: 2023-01-03
