--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,11 @@
+- title: "TBD"
+  presenter: 한창훈
+  date: 2023-02-15
+  slide:
+- title: "TBD"
+  presenter: 김민형
+  date: 2023-01-31
+  slide:
 - title: "Generative Agents: Interactive Simulacra of Human Behavior"
   presenter: 강지수
   date: 2023-01-17
