--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -2,10 +2,10 @@
   presenter: 한창훈
   date: 2023-02-15
   slide:
-- title: "TBD"
+- title: "Less is More: SlimG for Accurate, Robust, and Interpretable Graph Mining"
   presenter: 김민형
   date: 2023-01-31
-  slide:
+  slide: /assets/pdf/0131_mh.pdf
 - title: "Generative Agents: Interactive Simulacra of Human Behavior"
   presenter: 강지수
   date: 2023-01-17
