세미나 일정 업데이트

--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,5 +1,9 @@
 - title: "TBD"
   presenter: 한창훈
+  date: 2023-02-28
+  slide:
+- title: "TBD"
+  presenter: 이영준
   date: 2023-02-15
   slide:
 - title: "Less is More: SlimG for Accurate, Robust, and Interpretable Graph Mining"
