--- a/_data/alumni_undergrad.yml
+++ b/_data/alumni_undergrad.yml
@@ -9,3 +9,9 @@
 - name: YounUk Song
 
 - name: Jaeo Cho
+
+- name: SoJung Lee
+  image: /img/posts/students/sojung-lee.png
+  interest: Recommendation System, K-Nearest Neighbors
+  email: prikey7@kookmin.ac.kr
+  github: https://github.com/grapefruit224
