--- a/_data/graduate_student.yml
+++ b/_data/graduate_student.yml
@@ -1,17 +1,3 @@
-- name: HyunSeok Park
-  image: /img/posts/students/hyunseok-park.png
-  interest: Graph Neural Networks, K-cores
-  email: 20151741@kookmin.ac.kr
-  github: https://github.com/gustjr7879
-  instagram: https://www.instagram.com/hyunskki/
-
-- name: Ismail Abdulhakin
-  image: /img/posts/students/ismail-abdulhakin.png
-  interest: Deep-learning Methods, Weather Analysis
-  email: iamismail@kookmin.ac.kr
-  github: https://github.com/iamismaill
-  linkedin: https://www.linkedin.com/in/abdulhakin-m-ismail-2715b0151/
-  
 - name: ChangHun Han
   image: /img/posts/students/changhun-han.png
   interest: Large scale graph mining, K-Nearest Neighbors
@@ -41,3 +27,9 @@
   interest: Deep Learning
   email: tn1078@kookmin.ac.kr
   github: https://github.com/kjsoo-1010
+
+- name: KiYeon Park
+  image: /img/posts/students/kiyeon-park.jpg
+  interest: Spatial-Temporal Graph Neural Network
+  email: willam1017@kookmin.ac.kr
+  github: https://github.com/MargielaParis
