--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,4 +1,4 @@
-- title: "TBD"
+- title: "Efficient Proximity Search in Time-accumulating High-dimensional Data using Multi-level Block Indexing"
   presenter: 한창훈
   date: 2023-02-28
   slide:
