--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,7 +1,7 @@
 - title: "Efficient Proximity Search in Time-accumulating High-dimensional Data using Multi-level Block Indexing"
   presenter: 한창훈
   date: 2023-02-28
-  slide: /assets/pdf/0301_noye.pdf
+  # slide: /assets/pdf/0301_noye.pdf
 - title: "Do Transformers Really Perform Bad for Graph Representation?"
   presenter: 이영준
   date: 2023-02-15
