--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,22 +1,31 @@
+- title: "TBA"
+  presenter: 김민형
+  date: 2024-06-05
+- title: "TBA"
+  presenter: 김수지
+  date: 2024-05-22
+- title: "TBA"
+  presenter: 박기연
+  date: 2024-05-08
 - title: "Efficient Proximity Search in Time-accumulating High-dimensional Data using Multi-level Block Indexing"
   presenter: 한창훈
-  date: 2023-02-28
+  date: 2024-02-28
   # slide: /assets/pdf/0301_noye.pdf
 - title: "Do Transformers Really Perform Bad for Graph Representation?"
   presenter: 이영준
-  date: 2023-02-15
+  date: 2024-02-15
   slide: /assets/pdf/0215_yj
 - title: "Less is More: SlimG for Accurate, Robust, and Interpretable Graph Mining"
   presenter: 김민형
-  date: 2023-01-31
+  date: 2024-01-31
   slide: /assets/pdf/0131_mh.pdf
 - title: "Generative Agents: Interactive Simulacra of Human Behavior"
   presenter: 강지수
-  date: 2023-01-17
+  date: 2024-01-17
   slide: /assets/pdf/0117_js.pdf
 - title: "모두가 알지만 모르는 딥러닝 기초"
   presenter: 김혜성
-  date: 2023-01-03
+  date: 2024-01-03
   slide: /assets/pdf/hs_0103.pdf
 - title: "Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization"
   presenter: 김수지
