--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,10 +1,10 @@
-- title: "TBA"
+- title: TBA
   presenter: 김민형
   date: 2024-06-05
-- title: "TBA"
+- title: TBA
   presenter: 김수지
   date: 2024-05-22
-- title: "TBA"
+- title: TBA
   presenter: 박기연
   date: 2024-05-08
 - title: "Efficient Proximity Search in Time-accumulating High-dimensional Data using Multi-level Block Indexing"
