세미나 일정 수정

--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,11 +1,11 @@
 - title: "TBD"
-  presenter: 김민형
+  presenter: 강지수
   date: 2024-06-05
 - title: "TBD"
-  presenter: 김수지
+  presenter: 박기연
   date: 2024-05-22
 - title: "TBD"
-  presenter: 박기연
+  presenter: 김수지
   date: 2024-05-08
 - title: "Efficient Proximity Search in Time-accumulating High-dimensional Data using Multi-level Block Indexing"
   presenter: 한창훈
