--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -21,3 +21,9 @@
   interest: Recommendation System
   email: hsw1805@kookmin.ac.kr
   github:
+
+- name: Chan Park
+  image: /img/posts/students/chan-park.png
+  interest: Spatial-Temporal Graph, Deep Learning
+  email: ap25ap25@kookmin.ac.kr
+  github: https://github.com/Chani0125
