--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,3 +1,23 @@
+- title: "TBD"
+  presenter: 
+  date: 2024-08-28
+  # slide: /assets/pdf/
+- title: "TBD"
+  presenter: 
+  date: 2024-08-14
+  # slide: /assets/pdf/
+- title: "TBD"
+  presenter: 
+  date: 2024-07-31
+  # slide: /assets/pdf/
+- title: "TBD"
+  presenter: 
+  date: 2024-07-17
+  # slide: /assets/pdf/
+- title: "TBD"
+  presenter: 
+  date: 2024-07-03
+  # slide: /assets/pdf/
 - title: "Retrieval-Augmented Generation"
   presenter: 강지수
   date: 2024-06-19
