세미나 일정 수정

--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,21 +1,21 @@
 - title: "TBD"
-  presenter: 
+  presenter: 박기연
   date: 2024-08-28
   # slide: /assets/pdf/
 - title: "TBD"
-  presenter: 
+  presenter: 김수지
   date: 2024-08-14
   # slide: /assets/pdf/
 - title: "TBD"
-  presenter: 
+  presenter: 이영준
   date: 2024-07-31
   # slide: /assets/pdf/
 - title: "TBD"
-  presenter: 
+  presenter: 한창훈
   date: 2024-07-17
   # slide: /assets/pdf/
 - title: "TBD"
-  presenter: 
+  presenter: 김민형 
   date: 2024-07-03
   # slide: /assets/pdf/
 - title: "Retrieval-Augmented Generation"
