학부연구생 업데이트

--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -27,3 +27,35 @@
   interest: Spatial-Temporal Graph, Deep Learning
   email: ap25ap25@kookmin.ac.kr
   github: https://github.com/Chani0125
+
+- name: MunJoo Park
+  image: /img/posts/students/munjoo-park.jpeg
+  interest: Data Engineering
+  email: som990101@gmail.com
+
+- name: SungWon Park
+  image: /img/posts/students/sungwon-park.jpg
+  interest: Deep Learning
+  email: tjddnjs612@kookmin.ac.kr
+  github: https://github.com/Solid9966
+
+- name: SeongHo Kim
+  image: /img/posts/students/seongho-kim.jpg
+  interest: Clustering
+  email: ho44013@kookmin.ac.kr
+  github: https://github.com/ho44013
+
+- name: HaWoon Kang
+  image: /img/posts/students/hawoon-kang.jpg
+  interest: Recommendation System
+  email: kiwi0coding@gmail.com
+
+- name: HyeonSang Cho
+  image: /img/posts/students/hyeonsang-cho.jpg
+  interest: Recommendation System
+  email: kyr76767@kookmin.ac.kr
+
+- name: GaHyun Lee
+  image: /img/posts/students/gahyun-lee.jpg
+  interest: Recommendation System
+  email: anna030608@gmail.com
