--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -14,10 +14,10 @@
   presenter: 한창훈
   date: 2024-07-17
   # slide: /assets/pdf/
-- title: "TBD"
+- title: "A Gradient Boosting Approach for Training Convolutional and Deep Neural Networks"
   presenter: 김민형 
   date: 2024-07-03
-  # slide: /assets/pdf/
+  slide: /assets/pdf/mh_0703.pdf
 - title: "Retrieval-Augmented Generation"
   presenter: 강지수
   date: 2024-06-19
