--- a/_data/seminar.yml
+++ b/_data/seminar.yml
@@ -1,7 +1,7 @@
-- title: "TBD"
+- title: "Efficient Topology-Aware Data Augmentation for High-Degree Graph Neural Networks"
   presenter: 박기연
   date: 2024-08-28
-  # slide: /assets/pdf/
+  slide: /assets/pdf/0828_ky.pdf
 - title: "Cache locality is not enough : High-Performance Nearest Neighbor Search with Product Quantization Fast Scan"
   presenter: 김수지
   date: 2024-08-14
