--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -22,11 +22,11 @@
   email: hsw1805@kookmin.ac.kr
   github:
 
-- name: Chan Park
-  image: /img/posts/students/chan-park.png
-  interest: Spatial-Temporal Graph, Deep Learning
-  email: ap25ap25@kookmin.ac.kr
-  github: https://github.com/Chani0125
+# - name: Chan Park
+#   image: /img/posts/students/chan-park.png
+#   interest: Spatial-Temporal Graph, Deep Learning
+#   email: ap25ap25@kookmin.ac.kr
+#   github: https://github.com/Chani0125
 
 - name: MunJoo Park
   image: /img/posts/students/munjoo-park.jpeg
