--- a/_data/alumni_undergrad.yml
+++ b/_data/alumni_undergrad.yml
@@ -15,3 +15,9 @@
   interest: Recommendation System, K-Nearest Neighbors
   email: prikey7@kookmin.ac.kr
   github: https://github.com/grapefruit224
+
+- name: HyeSung Kim
+  image: /img/posts/students/hyesung-kim.png
+  interest: Graph Neural Network, Data Engineering
+  email: khs0020@kookmin.ac.kr
+  github: https://github.com/Borikhs/
