--- a/_data/graduate_student.yml
+++ b/_data/graduate_student.yml
@@ -1,7 +1,7 @@
 - name: ChangHun Han
   # image: /img/posts/students/changhun-han.png
-  # image: /img/posts/students/noye_ky.png
-  image: /img/posts/students/hbd_noye.jpg
+  image: /img/posts/students/noye_ky.png
+  # image: /img/posts/students/hbd_noye.jpg
   interest: Large scale graph mining, K-Nearest Neighbors
   email: codingnoye@kookmin.ac.kr
   github: https://github.com/codingnoye
@@ -14,8 +14,8 @@
   
 - name: SuJi Kim
   # image: /img/posts/students/suji-kim.png
-  # image: /img/posts/students/suji_ky.jpg
-  image: /img/posts/students/hbd_suji.jpg
+  image: /img/posts/students/suji_ky.jpg
+  # image: /img/posts/students/hbd_suji.jpg
   interest: K-Nearest Neighbors
   email: suji2924@kookmin.ac.kr
   github: https://github.com/suji2924
