--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -53,3 +53,8 @@
   image: /img/posts/students/gahyun-lee.jpg
   interest: Recommendation System
   email: anna030608@gmail.com
+
+- name: ChaeWon Jeong
+  image: /img/posts/students/cwjeong.jpg
+  interest: Recommendation System
+  email: chloe3205@kookmin.ac.kr
