--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -73,3 +73,8 @@
   image: /img/posts/students/hoyong-jeong.jpg
   interest: Recommendation Systems
   email: ghdyd586@gmail.com
+
+- name: WonCheol Son
+  image: /img/posts/students/woncheol-son.jpg
+  interest: Recommendation Systems
+  email: sonwon9@kookmin.ac.kr
