--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -78,3 +78,8 @@
   image: /img/posts/students/woncheol-son.jpg
   interest: Recommendation Systems
   email: sonwon9@kookmin.ac.kr
+
+- name: Jung Eun Park
+  image: /img/posts/students/jungeunpark.jpg
+  interest: Graph Representation Learning
+  email: ovepje2004@kookmin.ac.kr
