--- a/_data/alumni_undergrad.yml
+++ b/_data/alumni_undergrad.yml
@@ -21,3 +21,9 @@
   interest: Graph Neural Network, Data Engineering
   email: khs0020@kookmin.ac.kr
   github: https://github.com/Borikhs/
+
+- name: SungHoon Choe
+  image: /img/posts/students/sunghoon-choe.jpg
+  interest: Graph Algorithms
+  email: kookmin1916@kookmin.ac.kr
+  github: https://github.com/Neogulee
