--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -78,12 +78,12 @@
   interest: Graph Representation Learning
   email: ovepje2004@kookmin.ac.kr
   
-- name: Joonseo Yoon (윤준서)
-  # image: /img/posts/students/jungeunpark.jpg
-  interest: LLM Compression
+- name: Junseo Yoon (윤준서)
+  image: /img/posts/students/yoonjunseo.jpg
+  interest: LLM
   email: joonseojj@kookmin.ac.kr
 
 - name: Sunwoo Park (박선우)
   # image: /img/posts/students/jungeunpark.jpg
   interest: LLM Compression
-  email: joonseojj@kookmin.ac.kr
+  email: shark820@kookmin.ac.kr
