--- a/_data/undergraduate_student.yml
+++ b/_data/undergraduate_student.yml
@@ -4,11 +4,11 @@
 #   email: chldudfkr119@kookmin.ac.kr
 #   github: https://github.com/guahama
 
-- name: SeWon Hong (홍세원)
-  image: /img/posts/students/sewon-hong.jpg
-  interest: Recommendation Systems
-  email: hsw1805@kookmin.ac.kr
-  github:
+# - name: SeWon Hong (홍세원)
+#   image: /img/posts/students/sewon-hong.jpg
+#   interest: Recommendation Systems
+#   email: hsw1805@kookmin.ac.kr
+#   github:
 
 # - name: Chan Park
 #   image: /img/posts/students/chan-park.png
@@ -33,20 +33,20 @@
 #   email: ho44013@kookmin.ac.kr
 #   github: https://github.com/ho44013
 
-- name: HaWoon Kang (강하운)
-  image: /img/posts/students/hawoon-kang.jpg
-  interest: Recommendation Systems
-  email: kiwi0coding@gmail.com
+# - name: HaWoon Kang (강하운)
+#   image: /img/posts/students/hawoon-kang.jpg
+#   interest: Recommendation Systems
+#   email: kiwi0coding@gmail.com
 
 # - name: HyeonSang Cho
 #   image: /img/posts/students/hyeonsang-cho.jpg
 #   interest: Recommendation System
 #   email: kyr76767@kookmin.ac.kr
 
-- name: GaHyun Lee (이가현)
-  image: /img/posts/students/gahyun-lee.jpg
-  interest: Recommendation Systems
-  email: anna030608@gmail.com
+# - name: GaHyun Lee (이가현)
+#   image: /img/posts/students/gahyun-lee.jpg
+#   interest: Recommendation Systems
+#   email: anna030608@gmail.com
 
 - name: ChaeWon Jeong (정채원)
   image: /img/posts/students/cwjeong.jpg
@@ -86,4 +86,9 @@
 - name: Sunwoo Park (박선우)
   # image: /img/posts/students/jungeunpark.jpg
   interest: LLM Compression
+  email: shark820@kookmin.ac.kr
+
+- name: ??? (조아영)
+  # image: /img/posts/students/jungeunpark.jpg
+  interest: GNN for Brain Analysis
   email: shark820@kookmin.ac.kr
